<resources>
    <string name="app_name">TaxiApp</string>
    <string name="taxi_service">Taxi service</string>

    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_passenger_maps">Map</string>

    <string name="imPassenger">I`m passenger</string>
    <string name="imDriver">I`m driver</string>

    <string name="driverSingIn">Driver Sign in</string>
    <string name="passengerSingIn">Passenger Sign in</string>

    <string name="signIn">Sing in</string>
    <string name="tapTo...">Tap to Log In</string>
    <string name="settings">Settings</string>
    <string name="SignOut">Sing out</string>
    <string name="book_taxi">Book Taxi</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confPassword">Confirm Password</string>
</resources>